# drf-logto

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml  tests.yml
drf_logto/: admin.py  apps.py  backends.py  jwt_auth.py  models.py  settings.py  urls.py  views.py
tests/: conftest.py  requirements.txt  settings.py  test_backends.py
