[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drf-logto"
version = "0.1.2-alpha"
dependencies = [
    "django>=3.2",
    "djangorestframework>=3.13.0",
    "djangorestframework-simplejwt[crypto]>=4.6.0",
]
description = "Logto authentication integration for Django Rest Framework."
readme = "README.md"
requires-python = ">= 3.8"
authors = [
    {name = "Hussaini Usman", email = "hussainmaina27@gmail.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project.urls]
Homepage = "https://github.com/Housain-maina/drf-logto"